// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render error for dupes 1`] = `
<Fragment>
  <EuiFlexGroup
    gutterSize="xs"
    key="0"
  >
    <EuiFlexItem>
      <EuiFieldText
        aria-label="Fieldname"
        isInvalid={true}
        onChange={[Function]}
        placeholder="Field name"
        value="foo"
      />
    </EuiFlexItem>
    <EuiFlexItem>
      <EuiSuperSelect
        append={
          <EuiButtonIcon
            aria-label="Remove field"
            color="danger"
            iconType="trash"
            onClick={[Function]}
            title="Remove field"
          />
        }
        compressed={false}
        fullWidth={false}
        hasDividers={false}
        isInvalid={false}
        isLoading={false}
        onChange={[Function]}
        options={
          Array [
            Object {
              "inputDisplay": <span>
                <FieldIcon
                  type="string"
                />
                <span>
                  string
                </span>
              </span>,
              "value": "String",
            },
            Object {
              "inputDisplay": <span>
                <FieldIcon
                  type="number"
                />
                <span>
                  number
                </span>
              </span>,
              "value": "Number",
            },
          ]
        }
        valueOfSelected="String"
      />
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiFlexGroup
    gutterSize="xs"
    key="1"
  >
    <EuiFlexItem>
      <EuiFieldText
        aria-label="Fieldname"
        isInvalid={false}
        onChange={[Function]}
        placeholder=""
        value="bar"
      />
    </EuiFlexItem>
    <EuiFlexItem>
      <EuiSuperSelect
        append={
          <EuiButtonIcon
            aria-label="Remove field"
            color="danger"
            iconType="trash"
            onClick={[Function]}
            title="Remove field"
          />
        }
        compressed={false}
        fullWidth={false}
        hasDividers={false}
        isInvalid={false}
        isLoading={false}
        onChange={[Function]}
        options={
          Array [
            Object {
              "inputDisplay": <span>
                <FieldIcon
                  type="string"
                />
                <span>
                  string
                </span>
              </span>,
              "value": "String",
            },
            Object {
              "inputDisplay": <span>
                <FieldIcon
                  type="number"
                />
                <span>
                  number
                </span>
              </span>,
              "value": "Number",
            },
          ]
        }
        valueOfSelected="String"
      />
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiFlexGroup
    gutterSize="xs"
    key="2"
  >
    <EuiFlexItem>
      <EuiFieldText
        aria-label="Fieldname"
        isInvalid={true}
        onChange={[Function]}
        placeholder="Field name"
        value="foo"
      />
    </EuiFlexItem>
    <EuiFlexItem>
      <EuiSuperSelect
        append={
          <EuiButtonIcon
            aria-label="Remove field"
            color="danger"
            iconType="trash"
            onClick={[Function]}
            title="Remove field"
          />
        }
        compressed={false}
        fullWidth={false}
        hasDividers={false}
        isInvalid={false}
        isLoading={false}
        onChange={[Function]}
        options={
          Array [
            Object {
              "inputDisplay": <span>
                <FieldIcon
                  type="string"
                />
                <span>
                  string
                </span>
              </span>,
              "value": "String",
            },
            Object {
              "inputDisplay": <span>
                <FieldIcon
                  type="number"
                />
                <span>
                  number
                </span>
              </span>,
              "value": "Number",
            },
          ]
        }
        valueOfSelected="Number"
      />
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiSpacer
    size="xs"
  />
  <EuiButtonEmpty
    iconType="plusInCircleFilled"
    onClick={[Function]}
    size="xs"
  >
    Add
  </EuiButtonEmpty>
</Fragment>
`;

exports[`should render error for empty name 1`] = `
<Fragment>
  <EuiFlexGroup
    gutterSize="xs"
    key="0"
  >
    <EuiFlexItem>
      <EuiFieldText
        aria-label="Fieldname"
        isInvalid={false}
        onChange={[Function]}
        placeholder=""
        value="foo"
      />
    </EuiFlexItem>
    <EuiFlexItem>
      <EuiSuperSelect
        append={
          <EuiButtonIcon
            aria-label="Remove field"
            color="danger"
            iconType="trash"
            onClick={[Function]}
            title="Remove field"
          />
        }
        compressed={false}
        fullWidth={false}
        hasDividers={false}
        isInvalid={false}
        isLoading={false}
        onChange={[Function]}
        options={
          Array [
            Object {
              "inputDisplay": <span>
                <FieldIcon
                  type="string"
                />
                <span>
                  string
                </span>
              </span>,
              "value": "String",
            },
            Object {
              "inputDisplay": <span>
                <FieldIcon
                  type="number"
                />
                <span>
                  number
                </span>
              </span>,
              "value": "Number",
            },
          ]
        }
        valueOfSelected="String"
      />
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiFlexGroup
    gutterSize="xs"
    key="1"
  >
    <EuiFlexItem>
      <EuiFieldText
        aria-label="Fieldname"
        isInvalid={true}
        onChange={[Function]}
        placeholder="Field name"
        value=""
      />
    </EuiFlexItem>
    <EuiFlexItem>
      <EuiSuperSelect
        append={
          <EuiButtonIcon
            aria-label="Remove field"
            color="danger"
            iconType="trash"
            onClick={[Function]}
            title="Remove field"
          />
        }
        compressed={false}
        fullWidth={false}
        hasDividers={false}
        isInvalid={false}
        isLoading={false}
        onChange={[Function]}
        options={
          Array [
            Object {
              "inputDisplay": <span>
                <FieldIcon
                  type="string"
                />
                <span>
                  string
                </span>
              </span>,
              "value": "String",
            },
            Object {
              "inputDisplay": <span>
                <FieldIcon
                  type="number"
                />
                <span>
                  number
                </span>
              </span>,
              "value": "Number",
            },
          ]
        }
        valueOfSelected="String"
      />
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiFlexGroup
    gutterSize="xs"
    key="2"
  >
    <EuiFlexItem>
      <EuiFieldText
        aria-label="Fieldname"
        isInvalid={false}
        onChange={[Function]}
        placeholder=""
        value="fooz"
      />
    </EuiFlexItem>
    <EuiFlexItem>
      <EuiSuperSelect
        append={
          <EuiButtonIcon
            aria-label="Remove field"
            color="danger"
            iconType="trash"
            onClick={[Function]}
            title="Remove field"
          />
        }
        compressed={false}
        fullWidth={false}
        hasDividers={false}
        isInvalid={false}
        isLoading={false}
        onChange={[Function]}
        options={
          Array [
            Object {
              "inputDisplay": <span>
                <FieldIcon
                  type="string"
                />
                <span>
                  string
                </span>
              </span>,
              "value": "String",
            },
            Object {
              "inputDisplay": <span>
                <FieldIcon
                  type="number"
                />
                <span>
                  number
                </span>
              </span>,
              "value": "Number",
            },
          ]
        }
        valueOfSelected="Number"
      />
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiSpacer
    size="xs"
  />
  <EuiButtonEmpty
    iconType="plusInCircleFilled"
    onClick={[Function]}
    size="xs"
  >
    Add
  </EuiButtonEmpty>
</Fragment>
`;

exports[`should render field editor 1`] = `
<Fragment>
  <EuiFlexGroup
    gutterSize="xs"
    key="0"
  >
    <EuiFlexItem>
      <EuiFieldText
        aria-label="Fieldname"
        isInvalid={false}
        onChange={[Function]}
        placeholder=""
        value="foo"
      />
    </EuiFlexItem>
    <EuiFlexItem>
      <EuiSuperSelect
        append={
          <EuiButtonIcon
            aria-label="Remove field"
            color="danger"
            iconType="trash"
            onClick={[Function]}
            title="Remove field"
          />
        }
        compressed={false}
        fullWidth={false}
        hasDividers={false}
        isInvalid={false}
        isLoading={false}
        onChange={[Function]}
        options={
          Array [
            Object {
              "inputDisplay": <span>
                <FieldIcon
                  type="string"
                />
                <span>
                  string
                </span>
              </span>,
              "value": "String",
            },
            Object {
              "inputDisplay": <span>
                <FieldIcon
                  type="number"
                />
                <span>
                  number
                </span>
              </span>,
              "value": "Number",
            },
          ]
        }
        valueOfSelected="String"
      />
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiFlexGroup
    gutterSize="xs"
    key="1"
  >
    <EuiFlexItem>
      <EuiFieldText
        aria-label="Fieldname"
        isInvalid={false}
        onChange={[Function]}
        placeholder=""
        value="food"
      />
    </EuiFlexItem>
    <EuiFlexItem>
      <EuiSuperSelect
        append={
          <EuiButtonIcon
            aria-label="Remove field"
            color="danger"
            iconType="trash"
            onClick={[Function]}
            title="Remove field"
          />
        }
        compressed={false}
        fullWidth={false}
        hasDividers={false}
        isInvalid={false}
        isLoading={false}
        onChange={[Function]}
        options={
          Array [
            Object {
              "inputDisplay": <span>
                <FieldIcon
                  type="string"
                />
                <span>
                  string
                </span>
              </span>,
              "value": "String",
            },
            Object {
              "inputDisplay": <span>
                <FieldIcon
                  type="number"
                />
                <span>
                  number
                </span>
              </span>,
              "value": "Number",
            },
          ]
        }
        valueOfSelected="String"
      />
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiFlexGroup
    gutterSize="xs"
    key="2"
  >
    <EuiFlexItem>
      <EuiFieldText
        aria-label="Fieldname"
        isInvalid={false}
        onChange={[Function]}
        placeholder=""
        value="fooz"
      />
    </EuiFlexItem>
    <EuiFlexItem>
      <EuiSuperSelect
        append={
          <EuiButtonIcon
            aria-label="Remove field"
            color="danger"
            iconType="trash"
            onClick={[Function]}
            title="Remove field"
          />
        }
        compressed={false}
        fullWidth={false}
        hasDividers={false}
        isInvalid={false}
        isLoading={false}
        onChange={[Function]}
        options={
          Array [
            Object {
              "inputDisplay": <span>
                <FieldIcon
                  type="string"
                />
                <span>
                  string
                </span>
              </span>,
              "value": "String",
            },
            Object {
              "inputDisplay": <span>
                <FieldIcon
                  type="number"
                />
                <span>
                  number
                </span>
              </span>,
              "value": "Number",
            },
          ]
        }
        valueOfSelected="Number"
      />
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiSpacer
    size="xs"
  />
  <EuiButtonEmpty
    iconType="plusInCircleFilled"
    onClick={[Function]}
    size="xs"
  >
    Add
  </EuiButtonEmpty>
</Fragment>
`;
